# SMRR

./: .gitignore  README.md
GEANT4/LABR3/LaBr3/: CMakeLists.txt
GEANT4/LABR3/LaBr3/include/: DetectorConstruction.hh~
GEANT4/LABR3/LaBr3/src/: DetectorConstruction.cc  DetectorConstruction.cc~  PrimaryGeneratorAction.cc  SensitiveDetector.cc  SensitiveDetector.cc~
GEANT4/LABR3/LaBr3_build/: exampleLaBr3
GEANT4/LaBr3/: CMakeLists.txt  LaBr3.cc
GEANT4/LaBr3/include/: DetectorConstruction.hh  LaBr3Hit copy.txt  LaBr3Hit.hh  PrimaryGeneratorAction.hh  RunAction.hh
GEANT4/LaBr3/src/: DetectorConstruction.cc  EventAction.cc  LaBr3Hit.cc  RunAction.cc  RunAction.txt  SensitiveDetector.cc
GEANT4/LaBr3_build/: CMakeCache.txt  Makefile  cmake_install.cmake  exampleLaBr3
GEANT4/LaBr3_build/.qt/: QtDeploySupport.cmake
GEANT4/LaBr3_v0/include/: DetectorConstruction.hh  EventAction.hh  SensitiveDetector.hh
GEANT4/LaBr3_v0_build/: cmake_install.cmake
GEANT4/Tasks/task1b/: README.md
GEANT4/V0/LaBr3_v0/: LaBr3.cc
GEANT4/V0/LaBr3_v0/include/: LaBr3Hit.hh  RunAction.txt  SensitiveDetector copy.txt
GEANT4/V0/LaBr3_v0/src/: PrimaryGeneratorAction.cc
GEANT4/V0/LaBr3_v0_build/: CMakeCache.txt  Makefile
GEANT4/V0/LaBr3_v0_build/.qt/: QtDeploySupport.cmake
GEANT4/V0/Tasks_solved_1/task1b/: README.md
GEANT4/V0/Tasks_solved_1/task1b/include/: PrimaryGeneratorAction.hh
GEANT4/V0/Tasks_solved_1/task1b/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
GEANT4/exercises/LaBr3/: LaBr3.cc
GEANT4/lectures/geometriesemplici/: LaBr3.cc
GEANT4/lectures/geometriesemplici/include/: DetectorConstruction.hh
GEANT4/lectures/geometriesemplici/src/: DetectorConstruction.cc
LaBr3/: CMakeLists.txt  LaBr3.cc  README.md
LaBr3/include/: DetectorConstruction.hh  DetectorMessenger.hh  LaBr3Hit.hh  RootSaver.hh  SensitiveDetector.hh  StackingAction.hh
LaBr3/src/: DetectorConstruction.cc  DetectorMessenger.cc  LaBr3Hit.cc  RootSaver.cc  SensitiveDetector.cc  StackingAction.cc
Prove/: test1
task/task1/: CMakeCache.txt  Makefile  cmake_install.cmake  exampletask1b
task/task1/.qt/: QtDeploySupport.cmake
task/task1/task1b/src/: DetectorConstruction.cc
task/task1/task1b_build/: CMakeCache.txt  cmake_install.cmake
task/task1/task1b_build/.qt/: QtDeploySupport.cmake
task/task2/task2a/: CMakeLists.txt
task/task2/task2a/include/: DetectorConstruction.hh:Zone.Identifier  RootSaver.hh
task/task2/task2a/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
task/task2/task2b/: CMakeLists.txt
task/task2/task2b/include/: DetectorConstruction.hh
task/task2/task2b/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc
task/task2/task2b_build/: CMakeCache.txt  Makefile  cmake_install.cmake
task/task2/task2b_build/.qt/: QtDeploySupport.cmake
task/task3/task3a/: CMakeLists.txt
task/task3/task3a_build/: CMakeCache.txt
task/task3/task3b/: CMakeLists.txt  run_0.root  task3b.mac  vis.mac
task/task3/task3b/include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
task/task3/task3b/macros/: mu_distance.mac  mu_energies.mac  run_0.root  run_1.root  run_2.root  run_3.root  run_4.root  run_5.root  run_6.root
task/task3/task3b/src/: Analysis.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  StackingAction.cc
task/task3/task3b_build/: CMakeCache.txt  Makefile  cmake_install.cmake  exampletask3b  run_0.root  run_1.root  run_10.root  run_11.root  run_12.root  run_13.root  run_14.root  run_15.root  run_16.root  run_17.root  run_18.root  run_19.root  run_2.root  run_20.root  run_21.root  run_22.root  run_23.root  run_24.root  run_25.root  run_26.root  run_27.root  run_28.root  run_29.root  run_3.root  run_30.root  run_31.root  run_32.root  run_33.root  run_34.root  run_35.root  run_36.root  run_37.root  run_38.root  run_39.root  run_4.root  run_40.root  (+19 more)
task/task3/task3b_build/.qt/: QtDeploySupport.cmake
task/task4/task4a/: CMakeLists.txt
task/task4/task4a/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
task/task4/task4a_build/: CMakeCache.txt  Makefile  cmake_install.cmake  exampletask4a
task/task4/task4a_build/.qt/: QtDeploySupport.cmake
task1/: cacca.txt
task1/task1b/: Doxyfile:Zone.Identifier
task1/task1b/src/: PhysicsList.cc  PrimaryGeneratorAction.cc
task1/task1b_build/: CMakeCache.txt  Makefile  exampletask1b
task1b/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
